# supermarket

./: .gitignore  .pre-commit-config.yaml  .prettierrc.json  Cargo.toml  README.md  deny.toml  package-lock.json  package.json  urls.md
.cargo/: config.toml
.github/workflows/: ci.yml  pull-request.yml
supermarket/: Cargo.toml
supermarket-albert-heijn/: Cargo.toml
supermarket-albert-heijn/src/graphql/: get_member.graphql  schema.graphql
supermarket-authenticator/: package.json
supermarket-authenticator/src/: main.ts  renderer.ts
supermarket-jumbo/src/graphql/: get_profile.graphql  get_search_suggestions.graphql  loyalty_schema.graphql  schema.graphql
supermarket-web/: Cargo.toml  PLAN.md  README.md
supermarket-web/src/: app.rs  auth.rs  fileserv.rs  lib.rs  main.rs
supermarket-web/src/components/: layout.rs
supermarket-web/src/entities/: email_address.rs  provider.rs  provider_connection.rs  sea_orm_active_enums.rs  user.rs
supermarket/src/: client.rs  credentials.rs  lib.rs  product.rs  serde.rs
supermarket/src/internal/: auth.rs  client.rs  graphql.rs  json.rs  mod.rs  rest.rs
supermarket_albert_heijn/: Cargo.toml
supermarket_albert_heijn/src/: client.rs  internal.rs  lib.rs
supermarket_albert_heijn/src/graphql/: get_member.graphql
supermarket_albert_heijn/src/internal/: auth.rs  client.rs  common.rs  member.rs  mod.rs  product.rs  receipt.rs
supermarket_jumbo/: Cargo.toml
supermarket_jumbo/src/: client.rs  lib.rs
supermarket_jumbo/src/internal/: auth.rs  client.rs  common.rs  mod.rs  product.rs  receipt.rs
supermarket_playground/: Cargo.toml
supermarket_playground/src/: main.rs
supermarket_playground/src/graphql/: get_typename.graphql  introspection_schema.graphql
supermarket_web/: Cargo.toml
supermarket_web/src/: app.rs  main.rs
