[workspace]
members = [
    "packages/supermarket",
    "packages/supermarket-albert-heijn",
    "packages/supermarket-jumbo",
]
resolver = "2"

[workspace.package]
authors = ["Nixy <info@nixy.software>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/NixySoftware/supermarket"
version = "0.1.0"

[workspace.dependencies]
async-trait = "0.1.77"
chrono = { version = "0.4.34", features = ["serde"] }
chrono-tz = { version = "0.10.0", features = ["filter-by-regex"] }
graphql_client = { version = "0.15.0" }
reqwest = { version = "0.13.0", features = ["gzip", "json", "query"] }
serde = "1.0.197"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
