[package]
name = "supermarket-albert-heijn"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
graphql_client.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
supermarket = { path = "../supermarket" }
tokio.workspace = true
