[package]
name = "supermarket"
version = "0.1.0"
edition = "2021"

authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
graphql_client.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
