[package]
name = "supermarket_albert_heijn"
version = "0.1.0"
edition = "2021"

authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
graphql_client.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
supermarket = { path = "../supermarket" }

[dev-dependencies]
tokio = { version = "1.36.0", features = ["full"] }
