[package]
name = "supermarket_albert_heijn"
version = "0.1.0"
edition = "2021"

authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
chrono = "0.4.34"
graphql_client.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
supermarket = { path = "../supermarket" }
tokio.workspace = true
